[package]
name = "sciolyff"
version = "0.12.0"
authors = ["Em Zhan <zqianem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_yaml = "0.8.12"
itertools = "0.9.0"
